# backend/internal/handler/product/list_products.go
@@ -14,6 +14,10 @@ func (h Handler) ListProducts(c fiber.Ctx) error {
 
 	response := api.ListProductsResponse{Products: make([]api.Product, 0, len(products))}
 	for _, p := range products {
+		var brand *string
+		if p.Brand != "" {
+			brand = &p.Brand
+		}
 		var sourceCode *string
 		if p.SourceCode != "" {
 			sourceCode = &p.SourceCode
@@ -29,6 +33,7 @@ func (h Handler) ListProducts(c fiber.Ctx) error {
 				CarbohydratesG: p.Macros.CarbohydratesG,
 			},
 			Nutrients:  p.Nutrients,
+			Brand:      brand,
 			SourceCode: sourceCode,
 			CreatedAt:  p.CreatedAt,
 			UpdatedAt:  p.UpdatedAt,
